fix: adjust width of info icon for better alignment

--- a/energetica/static/energetica.css
+++ b/energetica/static/energetica.css
@@ -1748,7 +1748,7 @@ img.small.graph-container {
 }
 
 .info_icon {
-    width: 0.55em;
+    width: 0.54em;
     height: auto;
     filter: invert(100%);
 }
